--- a/Style/Sass/single.scss
+++ b/Style/Sass/single.scss
@@ -2,14 +2,39 @@
     background-color: black;
     padding: 15px;
     margin-top: 200px;
+    height: 500px;
+    @media (max-width:1024px){
+        height: 900px;
+
+    }
    &_content{
     margin: 0 auto;
     margin-top: 100px;
     width: 80%;
     &_title{
-        font-size: 50px;
+        font-size: 80px;
         color: white;
-
+        @media (max-width:1024px){
+            font-size: 60px;
+        }
+        @media (max-width: 800px){
+            font-size: 45px;
+        }
     }
+
    }
+
+}
+.selectores_content{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 60px;
+    @media (max-width: 1024px){
+        flex-direction: column;
+        height: 500px;
+        align-items: center;
+                
+    }
+   
+     
 }
