--- a/Style/style.css
+++ b/Style/style.css
@@ -418,7 +418,7 @@ a {
   background-color: black;
   padding: 15px;
   margin-top: 200px;
-  height: 500px;
+  height: 800px;
 }
 @media (max-width: 1024px) {
   .ct_suspension {
@@ -444,6 +444,26 @@ a {
     font-size: 45px;
   }
 }
+.ct_suspension_content .content_referencia {
+  text-align: center;
+  margin: 0 auto;
+  width: 80%;
+  height: 300px;
+  margin-top: 200px;
+  background-color: beige;
+  border-radius: 20px;
+}
+@media (max-width: 1024px) {
+  .ct_suspension_content .content_referencia {
+    margin-top: 0;
+    height: 180px;
+  }
+}
+@media (max-width: 608px) {
+  .ct_suspension_content .content_referencia {
+    height: 150px;
+  }
+}
 
 .selectores_content {
   display: flex;
@@ -456,6 +476,10 @@ a {
     height: 500px;
     align-items: center;
   }
+}
+
+p {
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
