Pequeño ajuste en stilos

--- a/Style/Sass/global.scss
+++ b/Style/Sass/global.scss
@@ -8,8 +8,8 @@ body{
 }
 a{
     font-weight: bold;
-    color: black;
-    text-decoration: none;
+    color:white;
+     
 }
 /*.pf_dark{
     background-color: black;
